workshop-10/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop-10
  labels:
    name: workshop-10
    module: workshop-10
