workshop-10/02-frontend-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: workshop-10
  name: frontend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
