workshop-10/03-svc-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  namespace: workshop-10
  name: svc-clusterip
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
