workshop-10/04-svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  namespace: workshop-10
  name: svc-nodeport
spec:
  type: NodePort
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
