workshop-10/05-svc-external.yml
apiVersion: v1
kind: Service
metadata:
  namespace: workshop-10
  name: chula-hospital
spec:
  type: ExternalName
  externalName: chulalongkornhospital.go.th
