workshop-10/06-my-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: workshop-10
  name: my-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-clusterip
                port:
                  number: 80
